--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="jumbotron text-center">
   <h2>Zerodha APIs Test environment</h2>
-  <p>Free test environment to test Zerodha's Kite APIs</p> 
+  <p>Free sandbox for testing Zerodha's <a href="https://kite.trade/docs/connect/v3">Kite and Coin APIs</a></p> 
 </div>
   
 <div class="container">
