--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <p>All the v3 <a href="https://kite.trade/docs/connect/v3/">API mocks are available</a></p>      
     </div>
     <div class="col-sm-4">
-      <h3>Replace endpoint</h3>
+      <h3>Endpoint</h3>
       <p>Replace <a href="https://kite.trade/docs/connect/v3/#root-api-endpoint">the API endpoint</a> to <code>https://zerodha-sandbox.herokuapp.com/</code> </p>
     </div>
     <div class="col-sm-4">
       <h3>Free</h3>        
-      <p>The test API mocks are available for free</p>
+      <p>No need of any paid API keys</p>
     </div>
   </div>
 
@@ -43,6 +43,21 @@
     <div class="col-sm-4">
       <h3>Coffee</h3>        
       <p>We love <a href="https://www.buymeacoffee.com/nordible"> coffee</a></p>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Run locally</h3>
+      <p>You can run it like any npm project</p>      
+    </div>
+    <div class="col-sm-4">
+      <h3>Call from cloud</h3>
+      <p>On ready to use free <a href="https://zerodha-sandbox.herokuapp.com/">endpoint</a></p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Premium?</h3>        
+      <p>For premium plan <a href="mailto:info@nordible.com"> contact us</a></p>
     </div>
   </div>
 
