--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>v3 APIs</h3>
-      <p>All the v3 <a href="https://kite.trade/docs/connect/v3/">API mocks are available</a></p>      
+      <p><a href="https://kite.trade/docs/connect/v3/">All the v3 API</a> mocks will be available*</p>      
     </div>
     <div class="col-sm-4">
       <h3>Endpoint</h3>
@@ -55,10 +55,10 @@
       <h3>Call from cloud</h3>
       <p>On ready to use free <a href="https://zerodha-sandbox.herokuapp.com/">endpoint</a></p>
     </div>
-    <div class="col-sm-4">
+    <!-- <div class="col-sm-4">
       <h3>Premium?</h3>        
       <p>For premium plan <a href="mailto:info@nordible.com"> contact us</a></p>
-    </div>
+    </div> -->
   </div>
 
   <footer>&copy; <a href="https://nordible.com/">nordible</a></footer>
