--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
       <h3>Call from cloud</h3>
       <p>On ready to use free <a href="https://zerodha-sandbox.herokuapp.com/">endpoint</a></p>
     </div>
-    <!-- <div class="col-sm-4">
-      <h3>Premium?</h3>        
-      <p>For premium plan <a href="mailto:info@nordible.com"> contact us</a></p>
-    </div> -->
+    <div class="col-sm-4">
+      <h3>Collab request</h3>        
+      <p><code>COLLABORATION-NEEDED</code> is our extra key to indicate collaborations needs :)</a></p>
+    </div>
   </div>
 
   <footer>&copy; <a href="https://nordible.com/">nordible</a></footer>
