first request slow

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <p>You can run it like any npm project</p>      
     </div>
     <div class="col-sm-4">
-      <h3>Call from cloud</h3>
-      <p>On ready to use free <a href="https://zerodha-sandbox.herokuapp.com/">endpoint</a></p>
+      <h3>Slow?</h3>
+      <p>Your very first request will be slow. Be patient!</p>
     </div>
     <div class="col-sm-4">
       <h3>Collab request</h3>        
