--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="row">
     <div class="col-sm-4">
       <h3>v3 APIs</h3>
-      <p><a href="https://kite.trade/docs/connect/v3/">All the v3 API</a> mocks will be available*</p>      
+      <p><a href="https://kite.trade/docs/connect/v3/">All the v3 API</a> mocks available*</p>      
     </div>
     <div class="col-sm-4">
       <h3>Endpoint</h3>
