highlight root URL

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="jumbotron text-center">
   <h2>Zerodha APIs Test environment</h2>
   <p>Free sandbox for testing Zerodha's <a href="https://kite.trade/docs/connect/v3">Kite and Coin APIs</a></p> 
+  Root URL <code>https://zerodha-sandbox.herokuapp.com/</code>
 </div>
   
 <div class="container">
